。。。
- 安卓没有List.of改用Arrays.asList
- 修复安卓上，ValueLabel自动变长的bug（我也不知道原因，growX -> grow)
- 处理了一个与别的mod的冲突